@@ -492,11 +492,11 @@ class Post(object):
             dest,
             self.is_two_file),
 
-        signal('compiled').send(dict(
-            source=self.translated_source_path(lang),
-            dest=dest,
-            post=self,
-        ))
+        signal('compiled').send({
+            'source': self.translated_source_path(lang),
+            'dest': dest,
+            'post': self,
+        })
 
         if self.meta('password'):
             # TODO: get rid of this feature one day (v8?; warning added in v7.3.0.)
